--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --localhost --android",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -14,31 +14,49 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/elements": "^1.3.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/eva-icons": "^5.1.2",
+    "@ui-kitten/moment": "^5.1.2",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
-    "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
+    "expo-asset": "~8.4.6",
+    "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.30.0",
     "react-native": "0.64.3",
+    "react-native-actions-sheet": "^0.6.1",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "jest-expo": "~44.0.1",
+    "@types/react-native-datepicker": "^1.7.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "jest": "^26.6.3",
+    "jest-expo": "^44.0.0",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
