--- a/package.json
+++ b/package.json
@@ -55,10 +55,21 @@
     "@types/react-native": "~0.64.12",
     "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-dotenv": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "eslint": "8.15.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "16.1.0",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-simple-import-sort": "7.0.0"
   },
   "private": true
 }
