--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
     "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -56,10 +58,6 @@
     "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-dotenv": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "5.23.0",
-    "jest": "^26.6.3",
-    "jest-expo": "^44.0.0",
-    "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5",
     "eslint": "8.15.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "16.1.0",
@@ -69,7 +67,11 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "eslint-plugin-simple-import-sort": "7.0.0"
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^44.0.0",
+    "react-test-renderer": "17.0.1",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
