--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "expo-start": "npx expo start",
     "start": "expo start --localhost --android",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -13,8 +14,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/datetimepicker": "4.0.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/elements": "^1.3.3",
     "@react-navigation/native": "^6.0.2",
@@ -24,35 +26,36 @@
     "@ui-kitten/moment": "^5.1.2",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.6",
-    "expo-constants": "~13.0.1",
-    "expo-font": "~10.0.4",
-    "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-web-browser": "~10.1.0",
+    "expo": "^46.0.0",
+    "expo-asset": "~8.6.3",
+    "expo-constants": "~13.2.4",
+    "expo-font": "~10.2.0",
+    "expo-linking": "~3.2.4",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "moment": "^2.29.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
-    "react-native": "0.64.3",
+    "react-native": "0.69.6",
     "react-native-actions-sheet": "^0.6.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@babel/core": "^7.18.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-dotenv": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "5.23.0",
@@ -67,9 +70,9 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "^26.6.3",
-    "jest-expo": "^44.0.0",
+    "jest-expo": "^46.0.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
