--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/elements": "^1.3.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/components": "^5.2.0",
     "@ui-kitten/eva-icons": "^5.1.2",
     "@ui-kitten/moment": "^5.1.2",
     "axios": "^0.27.2",
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@types/react": "~18.0.0",
+    "@types/react": "^18.3.0",
     "@types/react-native": "~0.69.1",
     "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-dotenv": "^0.2.0",
