--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --localhost --android",
+    "start": "expo start",
+    "localhost-android": "expo start --localhost --android",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "build-android": "eas build -p android --profile preview"
