--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "localhost-android": "expo start --localhost --android",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "build-android": "eas build -p android --profile preview"
+    "build-android": "eas build -p android --profile preview",
+    "doctor": "npx expo-doctor"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/plugin-transform-private-methods": "^7.24.7",
     "@eva-design/eva": "^2.1.1",
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/elements": "^1.3.3",
     "@react-navigation/native": "^6.0.2",
@@ -26,36 +28,35 @@
     "@ui-kitten/moment": "^5.1.2",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
-    "expo": "^46.0.0",
-    "expo-asset": "~8.6.3",
-    "expo-constants": "~13.2.4",
-    "expo-font": "~10.2.0",
-    "expo-linking": "~3.2.4",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-web-browser": "~11.0.0",
+    "expo": "^51.0.22",
+    "expo-asset": "~10.0.10",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "moment": "^2.29.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.30.0",
-    "react-native": "0.69.9",
+    "react-native": "0.74.3",
     "react-native-actions-sheet": "^0.6.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@types/react": "^18.3.0",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~18.2.79",
     "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-dotenv": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "5.23.0",
@@ -69,10 +70,10 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "jest": "^26.6.3",
-    "jest-expo": "^46.0.0",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.3",
     "react-test-renderer": "17.0.1",
-    "typescript": "^4.6.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
