--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.28.0",
     "expo": "^51.0.22",
     "expo-asset": "~10.0.10",
+    "expo-build-properties": "~0.12.4",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
